--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -18,42 +18,37 @@
   <body>
     <img class="logo" alt="Splitter logo" src="./images/SPLITTER.svg" />
 
-    <div class="form">
-      <label for="bill">Bill</label>
-      <input id="bill" name="bill" type="text" value="20.00" />
-      <span class="validation"></span>
+    <div class="calculator-container">
+      <div class="form">
+        <label for="bill">Bill</label>
+        <input id="bill" name="bill" type="text" value="20.00" />
+        <span class="validation"></span>
 
-      <label for="percent">Select Tip %</label>
-      <div class="tip-container">
-        <button class="tip-option" data-value="5">5%</button>
-        <button class="tip-option" data-value="10">10%</button>
-        <button class="tip-option selected" data-value="15">15%</button>
-        <button class="tip-option" data-value="25">25%</button>
-        <button class="tip-option" data-value="50">50%</button>
-        <input class="tip-option" type="text" placeholder="Custom" value="" />
+        <label for="percent">Select Tip %</label>
+        <div class="tip-container">
+          <button class="tip-option" data-value="5">5%</button>
+          <button class="tip-option" data-value="10">10%</button>
+          <button class="tip-option selected" data-value="15">15%</button>
+          <button class="tip-option" data-value="25">25%</button>
+          <button class="tip-option" data-value="50">50%</button>
+          <input class="tip-option" type="text" placeholder="Custom" value="" />
+        </div>
+
+        <label>Number of People</label>
+        <input type="text" value="1" />
       </div>
 
-      <label>Number of People</label>
-      <input type="text" value="1" />
-    </div>
-
-    <div class="calculations">
-      <div class="line">
-        <div class="label">Tip Amount / person</div>
-        <div id="per-person">$0.00</div>
+      <div class="calculations">
+        <div class="line">
+          <div class="label">Tip Amount<span>/ person</span></div>
+          <div id="per-person">$0.00</div>
+        </div>
+        <div class="line">
+          <div class="label">Total<span>/ person</span></div>
+          <div id="total">$0.00</div>
+        </div>
+        Reset
       </div>
-      <div class="line">
-        <div class="label">Total / person</div>
-        <div id="total">$0.00</div>
-      </div>
-      Reset
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
     </div>
   </body>
   <script src="main.js"></script>
